<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.flo.kf.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeMessage"
        android:textColor="@color/colorBlack"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimary"></View>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">
        <TableRow>
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/username"/>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:textColor="@color/colorBlack"
    android:layout_marginRight="16dp"
    android:id="@+id/usernameInput"
    android:background="@color/colorWhite"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">
        <TableRow>
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/password"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/colorBlack"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/passwordInput"
        android:background="@color/colorWhite"/>
        </TableRow>
    </TableLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:onClick="login"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:layout_marginBottom="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:id="@+id/registrationInfo"
        android:textColor="@color/colorBlack"
        android:layout_marginBottom="15dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:onClick="register"
        android:background="@color/colorPrimary"
        android:text="@string/registration"
        android:layout_marginBottom="15dp"/>


</LinearLayout>
