<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.flo.kf.RegistrationActivity"
    android:background="@color/colorLightGrey">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registrationIntro"
        android:textColor="@color/colorBlack"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="15dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">
        <TableRow>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/username"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:layout_marginRight="16dp"
                android:id="@+id/registrationUsernameInput"
                android:background="@color/colorWhite"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">
        <TableRow>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/password"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:id="@+id/registrationPasswordInput"
                android:background="@color/colorWhite"/>
        </TableRow>
        </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">
        <TableRow>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/mail"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:layout_marginRight="16dp"
                android:id="@+id/registrationMailInput"
                android:background="@color/colorWhite"/>

        </TableRow>
    </TableLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:onClick="finishRegistration"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

</LinearLayout>